# RaceGym

./: .gitignore  README.md  eval_callback.py  pyproject.toml  render_agent.py  requirements.txt  test_env.py  train.py
racegym/: __init__.py  env.py
sim/: CMakeLists.txt  build_sim.bat  vcpkg.json
sim/src/: physics.cpp  physics.h  renderer.cpp  renderer.h  sim.cpp  sim.h  track.cpp  track.h  vehicle.cpp  vehicle.h
tracks/: track1.json
